[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://GFX/Background/background_3.png" type="Texture" id=2]
[ext_resource path="res://GFX/font/Stabillo Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GFX/Icon/glassPanel.png" type="Texture" id=4]
[ext_resource path="res://GFX/Icon/buttonDefault.png" type="Texture" id=5]
[ext_resource path="res://GFX/Icon/buttonSelected.png" type="Texture" id=6]
[ext_resource path="res://GFX/Whitey/cell_4_1.png" type="Texture" id=7]
[ext_resource path="res://GFX/Whitey/cell_4_2.png" type="Texture" id=8]
[ext_resource path="res://SFX/button01.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
margin_left = -1.0
margin_top = -158.0
margin_right = 327.0
margin_bottom = 51.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TextureRect/CenterContainer"]
margin_left = 40.0
margin_top = 81.0
margin_right = 287.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "White the virus!"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="TextureRect"]
position = Vector2( 517.413, 368.092 )
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 330.537
margin_top = 210.427
margin_right = 746.537
margin_bottom = 611.427
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="TextureRect2"]
modulate = Color( 0.760784, 0.811765, 0.811765, 1 )
margin_left = 107.108
margin_top = 31.0806
margin_right = 297.108
margin_bottom = 108.081
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect2/Start"]
margin_left = -2.24316
margin_top = -16.0273
margin_right = 200.757
margin_bottom = 92.9727
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "	Start"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="TextureRect2"]
modulate = Color( 0.760784, 0.811765, 0.811765, 1 )
margin_left = 106.0
margin_top = 218.0
margin_right = 304.0
margin_bottom = 298.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TextureRect2/Credits"]
margin_left = 3.56763
margin_top = 6.56763
margin_right = 194.568
margin_bottom = 80.5676
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Info"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="TextureRect2"]
modulate = Color( 0.760784, 0.811765, 0.811765, 1 )
margin_left = 109.0
margin_top = 123.0
margin_right = 299.0
margin_bottom = 197.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TextureRect2/Settings"]
margin_left = 1.1893
margin_top = -17.2165
margin_right = 204.189
margin_bottom = 91.7835
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Difficulty"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="TextureRect2"]
modulate = Color( 0.760784, 0.811765, 0.811765, 1 )
margin_left = 101.0
margin_top = 310.0
margin_right = 309.0
margin_bottom = 379.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="TextureRect2/Exit"]
margin_left = 1.18921
margin_top = -4.13531
margin_right = 204.189
margin_bottom = 104.865
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exit"
align = 1
valign = 1
autowrap = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 688.539, 552.857 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 2 )
animation = "stand"
speed_scale = 0.8
playing = true

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="ClickWait" type="Timer" parent="."]
wait_time = 0.36

[node name="ClickWait2" type="Timer" parent="."]
wait_time = 0.3

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 587.675
margin_top = 316.565
margin_right = 961.675
margin_bottom = 593.565
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = 355.0
margin_top = 277.0
margin_right = 887.0
margin_bottom = 616.0
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 10.0
margin_top = 10.0
margin_right = 534.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 3 )
text = "Help Whitey destroy his enemies.
Nasty viruses are advancing so stop them, and preserve health.

Each wave you deafeat viruses gets weaker.

Use WASD to move and left click to shoot.
Collect powerups to quickly defeat enemies.

Good luck!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
visible = false
margin_left = 354.384
margin_top = 281.842
margin_right = 383.384
margin_bottom = 301.842
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect2/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="TextureRect2/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="TextureRect2/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="TextureRect2/Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="ClickWait" to="." method="_on_ClickWait_timeout"]
[connection signal="timeout" from="ClickWait2" to="." method="_on_ClickWait2_timeout"]
